# harmony

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
src/node/: master_node.cpp  master_node.h  node.h  worker_node.cpp  worker_node.h
